--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Popular Movies</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_sort_key">sort</string>
+    <string name="pref_sort_label">Sort By</string>
+    <string name="pref_sort_popular">popular</string>
+    <string name="pref_sort_label_rating">Top Rated</string>
+    <string name="pref_sort_label_popular">Popular</string>
+    <string name="pref_sort_rating">rating</string>
 </resources>
