--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="pref_sort_label_rating">Highest rated</string>
     <string name="pref_sort_label_popular">Most popular</string>
     <string name="pref_sort_rating">rating</string>
+    <string name="title_activity_detail">Detail</string>
 </resources>
