--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,16 +3,22 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="pref_sort_key">sort</string>
+
+    <string name="pref_sort_key">sort_setting</string>
     <string name="pref_sort_label">Sort order</string>
     <string name="pref_sort_popular">popular</string>
     <string name="pref_sort_label_rating">Highest rated</string>
     <string name="pref_sort_label_popular">Most popular</string>
     <string name="pref_sort_rating">rating</string>
+
     <string name="title_activity_detail">Detail</string>
     <string name="mark_as_favorite">Mark as favorite</string>
     <string name="_120_min">120 min</string>
     <string name="trailers">Trailers</string>
     <string name="review">Review</string>
     <string name="release_date_missing">Release date is missing</string>
+    <string name="poster_url">http://image.tmdb.org/t/p/w185</string>
+    <string name="action_favorite">Mark as favorite</string>
+    <string name="actionbar_spinner">ActionBar Spinner</string>
+    <string name="sort_by">Sort By</string>
 </resources>
