--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="action_favorite">Mark as favorite</string>
     <string name="sort_by">Sort By</string>
     <string name="sortby_spinner">Sort By</string>
+    <string name="action_share">Share</string>
 </resources>
