Add two-pane view for tablets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="play_icon_for_backdrop">Play icon for backdrop</string>
     <string name="image_for_poster">Image for poster</string>
     <string name="runtime">Runtime:</string>
+    <string name="view_all">view all</string>
 </resources>
