Add RecyclerView for GridView and image placeholder for no image in a poster url

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="image_for_poster">Image for poster</string>
     <string name="runtime">Runtime:</string>
     <string name="view_all">view all</string>
+    <string name="no_reviews_found">NO REVIEWS FOUND</string>
 </resources>
