--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,19 @@
 <resources>
     <string name="app_name">PopMovies</string>
+    <string name="title_activity_detail">Details</string>
     <string name="action_refresh">Refresh</string>
-
-    <string name="title_activity_detail">Detail</string>
-    <string name="trailers">Trailers</string>
-    <string name="review">Review</string>
-    <string name="release_date_missing">Release date is missing</string>
     <string name="action_favorite">Mark as favorite</string>
-    <string name="sort_by">Sort By</string>
-    <string name="sortby_spinner">Sort By</string>
     <string name="action_share">Share</string>
-    <string name="movie_rating">%1$s/10</string>
+
+    <string name="format_toolbar_title">%1$s Movies</string>
+
+    <string name="trailers">Trailers</string>
+    <string name="release_date_missing">Release date is missing</string>
+    <string name="format_movie_rating">%1$s/10</string>
     <string name="reviews">REVIEWS</string>
-    <string name="image_for_trailer">Image for trailer</string>
-    <string name="play_icon">Play Icon</string>
-    <string name="image_for_backdrop">Image for backdrop</string>
-    <string name="play_icon_for_backdrop">Play icon for backdrop</string>
     <string name="image_for_poster">Image for poster</string>
     <string name="runtime">Runtime:</string>
     <string name="view_all">view all</string>
     <string name="no_reviews_found">NO REVIEWS FOUND</string>
+
 </resources>
